# memora

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  agent-memory-implementation-plan.md  memora-implementation-plan.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: agent-instructions.md  architecture.md  cli-agent-reference.md  commands.md  competitive-baseline.md  evaluation.md  local-install.md  mcp-integrations.md  schema.md  semantic-search.md  spec.md  sync.md  yaml-v2-storage.md
examples/sample-vault/: config.yaml
examples/sample-vault/.agent-memory/: config.yaml
examples/sample-vault/.memora/: config.yaml
examples/sample-vault/Memories/decisions/: obsidian-markdown-canonical.md
examples/sample-vault/Memories/facts/: sqlite-cache.md
examples/sample-vault/Memories/preferences/: review-agent-memory.md  review-memora.md
examples/sample-vault/Memories/projects/: agent-memory.md  memora.md
examples/sample-vault/Memories/sources/: stage-0-scope-extract.md
examples/sample-vault/Memories/tasks/: add-cli-skeleton.md
examples/sample-vault/Sources/2026-04-29_abcd1234/: extract.md  source.md
examples/sample-vault/Wiki/: index.md  log.md  overview.md
examples/sample-vault/raw/inbox/webclips/: stage-0-planning-notes.md
scripts/: agent-memory-service.sh  install.sh  memora-service.sh  uninstall.sh
src/: agent.rs  agent_integration.py  brief.py  cli.py  cli.rs  config.py  config.rs  curation.py  embeddings.py  embeddings.rs  error.rs  evaluation.py  freshness.py  freshness.rs  indexer.py  indexer.rs  lifecycle.py  main.rs  markdown.py  markdown.rs  memora_profile.py  memory.rs  pdf_import.py  raw.rs  recall.py  recall_policy.py  retrieval.py  safety.py  schema.py  session.py  session.rs  slack_import.py  sources.py  sources.rs  sync.py  synthesis.py  url_import.py  util.rs  ux.py  vault.py  (+4 more)
src/agent_memory/: __init__.py  agent_integration.py  brief.py  cli.py  config.py  curation.py  embeddings.py  evaluation.py  freshness.py  indexer.py  lifecycle.py  mcp_server.py  pdf_import.py  profile.py  recall.py  recall_policy.py  retrieval.py  schema.py  session.py  sources.py  sync.py  synthesis.py  url_import.py  ux.py  vault.py
tests/: cli_smoke.rs  test_agent_integration.py  test_brief.py  test_cli.py  test_config.py  test_embeddings.py  test_evaluation.py  test_freshness.py  test_indexer.py  test_lifecycle.py  test_local_install.py  test_mcp_server.py  test_profile.py  test_recall.py  test_recall_policy.py  test_retrieval.py  test_schema.py  test_sync.py  test_synthesis.py  test_wiki.py
tests/fixtures/brief/: default.md
tests/fixtures/evaluation/: coding-agent-questions.yaml
tests/fixtures/vault-basic/: evaluation.yaml
tests/fixtures/vault-basic-memory-import/: basic-memory-export.yaml
tests/fixtures/vault-basic-memory-import/.memora/: config.yaml
tests/fixtures/vault-basic-memory-import/Memories/sources/: import-compatibility.md  import-related.md
tests/fixtures/vault-basic/.agent-memory/: config.yaml
tests/fixtures/vault-basic/Memories/decisions/: automatic-recall-policy.md  graph-relation-expansion.md  sqlite-fts-index.md  stale-embedding-provider.md
tests/fixtures/vault-basic/Memories/facts/: brief-citations.md  budget-packing.md  conflicting-durable-state.md  markdown-export-shape.md  old-index-design.md  sync-rebuild.md  yaml-parsing-colons.md
tests/fixtures/vault-basic/Memories/preferences/: json-output.md  migrated-preference.md  pytest-fixtures.md
tests/fixtures/vault-basic/Memories/projects/: markdown-source-truth.md
tests/fixtures/vault-basic/Memories/sources/: basic-memory-import-shape.md
tests/fixtures/vault-basic/Memories/tasks/: pending-agent-review.md
tests/fixtures/vault-basic/Sources/2026-04-30_stage12/: review.md
tests/fixtures/vault-conflicts/: Notes-with-conflict.md
tests/fixtures/vault-conflicts/.memora/: config.yaml
tests/fixtures/vault-conflicts/Memories/facts/: duplicate-a.md  duplicate-b.md  invalid-frontmatter.md
tests/fixtures/vault-large/.agent-memory/: config.yaml
tests/fixtures/vault-large/.memora/: config.yaml
tests/fixtures/vault-large/Memories/facts/: large-01.md  large-02.md  large-03.md  large-04.md  large-05.md  large-06.md  large-07.md  large-08.md  large-09.md  large-10.md
