[package]
name = "memora"
version = "0.8.0"
edition = "2024"
description = "CLI-first local Markdown memory engine for coding agents."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
fastembed = "5"
hex = "0.4"
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
