[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory"
version = "0.1.0"
description = "Local-first Obsidian-backed memory schema and validation helpers."
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.scripts]
memory = "agent_memory.cli:app"
memory-mcp = "agent_memory.mcp_server:main"

[project.optional-dependencies]
mcp = [
  "mcp",
]
pdf = [
  "pypdf",
]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
