[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory"
version = "0.1.0"
description = "CLI-first local memory engine for coding agents backed by Obsidian Markdown."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.scripts]
memory = "agent_memory.cli:app"
memory-mcp = "agent_memory.mcp_server:main"

[project.urls]
Documentation = "https://github.com/anton-zhedik/memory-project#readme"
Source = "https://github.com/anton-zhedik/memory-project"
Issues = "https://github.com/anton-zhedik/memory-project/issues"

[project.optional-dependencies]
mcp = [
  "mcp",
]
pdf = [
  "pypdf",
]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
