[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memora"
version = "0.1.0"
description = "CLI-first local memory engine for coding agents backed by Obsidian Markdown."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "fastembed>=0.7.4",
  "rich>=13.0",
  "typer>=0.12",
]

[project.scripts]
memora = "cli:app"

[project.urls]
Documentation = "https://github.com/anton-zhedik/memora#readme"
Source = "https://github.com/anton-zhedik/memora"
Issues = "https://github.com/anton-zhedik/memora/issues"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[dependency-groups]
lint = [
  "ruff>=0.15.12",
]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"
